WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
233626
ServiceWorkerContainer does not respond well to network process crash
https://bugs.webkit.org/show_bug.cgi?id=233626
Summary
ServiceWorkerContainer does not respond well to network process crash
youenn fablet
Reported
2021-11-30 01:37:59 PST
ServiceWorkerContainer does not respond well to network process crash
Attachments
Patch
(7.29 KB, patch)
2021-11-30 01:42 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2021-11-30 01:42:46 PST
Created
attachment 445398
[details]
Patch
Radar WebKit Bug Importer
Comment 2
2021-11-30 02:47:07 PST
<
rdar://problem/85857815
>
Chris Dumez
Comment 3
2021-11-30 08:01:05 PST
Comment on
attachment 445398
[details]
Patch r=me
EWS
Comment 4
2021-11-30 08:27:14 PST
Committed
r286299
(
244658@main
): <
https://commits.webkit.org/244658@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 445398
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug