ServiceWorkerContainer does not respond well to network process crash https://bugs.webkit.org/show_bug.cgi?id=233626

Reviewed by Chris Dumez.

Source/WebCore:

Add a boolean to SWClientConnection to identify whether connection is closed.
ServiceWorkerContainer will retrieve a new connection if its existing connection is closed.
Covered by updated test.

* workers/service/SWClientConnection.h:
(WebCore::SWClientConnection::isClosed const):
(WebCore::SWClientConnection::setIsClosed):
* workers/service/ServiceWorkerContainer.cpp:
(WebCore::ServiceWorkerContainer::ensureSWClientConnection):

Source/WebKit:

Set SW client connection as closed when IPC connection gets closed.

* WebProcess/Storage/WebSWClientConnection.cpp:
(WebKit::WebSWClientConnection::connectionToServerLost):

LayoutTests:

* http/wpt/service-workers/service-worker-networkprocess-crash.html:
* platform/mac-wk2/TestExpectations:
Remove flaky expectation as test is no longer flaky according results.webkit.org.



Canonical link: https://commits.webkit.org/244658@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286299 268f45cc-cd09-0410-ab3c-d52691b4dbfc