Source/WebKit/WebProcess/Storage/WebSWClientConnection.cpp
@@ -225,6 +225,7 @@ void WebSWClientConnection::getRegistrations(SecurityOriginData&& topOrigin, con
 
 void WebSWClientConnection::connectionToServerLost()
 {
+    setIsClosed();
     clear();
 }
 
